--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ button {
 }
 
 .nav-link {
+  position: relative;
   padding: 24px 0;
   display: block;
   font-weight: 500;
@@ -319,13 +320,12 @@ button {
   justify-content: center;
   border-radius: 50%;
   background-color: blue;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-lin:hover,
 .icon-lin:focus {
   background-color: #404bbf;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon {
@@ -480,8 +480,7 @@ button {
   justify-content: center;
   border-radius: 50%;
   background-color: blue;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-lin-footer:hover,
