--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,6 @@ button {
 }
 
 .nav-link.current::after {
-  content: " ";
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -108,6 +107,7 @@ button {
   height: 4px;
   border-radius: 2px;
   background-color: #404bbf;
+  content: "";
 }
 
 .contacts {
@@ -143,7 +143,7 @@ button {
 
 /* #region hero */
 .hero {
-  width: 1440px;
+  max-width: 1440px;
   margin: 0 auto;
   background-color: #2e2f42;
   padding-top: 188px;
@@ -155,6 +155,7 @@ button {
     url(../images/people-office.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .hero-title {
@@ -168,6 +169,7 @@ button {
   max-width: 496px;
 }
 .hero-btn {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -274,6 +276,8 @@ button {
   background: #fff;
   text-transform: capitalize;
   border-radius: 0 0 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-img {
@@ -313,14 +317,14 @@ button {
 }
 
 .icon-lin {
+  background-color: #4d5ae5;
   width: 40px;
   height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: blue;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-lin:hover,
@@ -329,7 +333,7 @@ button {
 }
 
 .icon {
-  fill: white;
+  fill: #f4f4fd;
 }
 
 /* #endregion our team */
@@ -338,6 +342,10 @@ button {
 
 .portfolio {
   padding: 120px 0 120px 0;
+}
+
+.container {
+  overflow: hidden;
 }
 
 .portfolio-title {
@@ -360,6 +368,7 @@ button {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-block {
@@ -369,11 +378,11 @@ button {
 .portfolio-block:hover .overlay {
   opacity: 1;
   transform: translateY(0);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .overlay {
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
   top: 0;
   left: 0;
@@ -385,9 +394,10 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  transform: translateX(100%);
   opacity: 0;
-  overflow: hidden;
+  padding: 40px 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-img {
@@ -450,6 +460,8 @@ button {
 
 .footer-container-social {
   margin-left: 120px;
+  margin-right: 120px
+  align-items: baseline;
 }
 
 .footer-Social-text {
@@ -458,6 +470,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
+  margin-bottom: 16px;
 }
 
 .icons-footer {
@@ -465,7 +478,7 @@ button {
   align-items: center;
   justify-content: center;
   gap: 16px;
-  margin-top: 16px;
+
 }
 
 .icon-footer {
@@ -473,14 +486,14 @@ button {
 }
 
 .icon-lin-footer {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 40px;
   height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: blue;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
 }
 
 .icon-lin-footer:hover,
