--- a/css/styles.css
+++ b/css/styles.css
@@ -95,11 +95,7 @@ button {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link.current {
-  position: relative;
-}
-
-.nav-link.current::after {
+.nav-link::after {
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -108,6 +104,14 @@ button {
   border-radius: 2px;
   background-color: #404bbf;
   content: "";
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link:hover::after,
+.nav-link:focus::after,
+.nav-link.current::after {
+  opacity: 1;
 }
 
 .contacts {
@@ -364,19 +368,18 @@ button {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-block {
   position: relative;
   overflow: hidden;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-block:hover .overlay {
+.portfolio-list-item:hover .overlay {
   opacity: 1;
   transform: translateY(0);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .overlay {
@@ -430,6 +433,7 @@ button {
 
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 
 .container-logo {
@@ -465,7 +469,7 @@ button {
   align-items: baseline;
 }
 
-.footer-Social-text {
+.footer-social-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -482,7 +486,7 @@ button {
 }
 
 .icon-footer {
-  fill: white;
+  fill: #f4f4fd;
 }
 
 .icon-lin-footer {
